Update profile picture and numref

--- a/digital-portfolio/analysis_example.ipynb
+++ b/digital-portfolio/analysis_example.ipynb
@@ -26,7 +26,7 @@
     "```{figure} ./img/titanic.jpg \n",
     "---\n",
     "height: 500px\n",
-    "name: titanic\n",
+    "name: titanic-figure\n",
     "---\n",
     "Titanic Image downloaded from [wikimedia](https://commons.wikimedia.org/wiki/File:RMS_Titanic_4.jpg).\n",
     "```\n"
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an EDA of the famous Titanic (shown in {numref}`titanic`) dataset from Kaggle. Through EDA, I will  try to achive the following goals:\n",
+    "This is an EDA of the famous Titanic (shown in {numref}`titanic-figure`) dataset from Kaggle. Through EDA, I will  try to achive the following goals:\n",
     "\n",
     "1. Investigate the demographic characteristics of the Titanic's passengers, such as their age, gender, and social class, to gain a better understanding of the composition of the passenger list.\n",
     "\n",
